[gd_scene load_steps=6 format=2]

[ext_resource path="res://Modules/UI/Add Edit Delete Display View/Add Edit Delete.gd" type="Script" id=1]
[ext_resource path="res://Assets/Other Themes/FlatUI/kenneyUI-green.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Other Themes/FlatUI/kenvector_future.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[node name="Add Edit Delete" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="UserLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "User"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -240.0
margin_right = 176.0
margin_bottom = 240.0
custom_constants/separation = 96

[node name="FirstBtn" type="Button" parent="VBoxContainer"]
margin_right = 352.0
margin_bottom = 96.251
rect_min_size = Vector2( 352, 96 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "First"

[node name="SecondBtn" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 352.0
margin_bottom = 288.251
rect_min_size = Vector2( 352, 96 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Second"

[node name="ThirdBtn" type="Button" parent="VBoxContainer"]
margin_top = 384.0
margin_right = 352.0
margin_bottom = 480.251
rect_min_size = Vector2( 352, 96 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Third"

[connection signal="pressed" from="VBoxContainer/FirstBtn" to="." method="_on_FirstBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/SecondBtn" to="." method="_on_SecondBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/ThirdBtn" to="." method="_on_ThirdBtn_pressed"]
